# storage-cleaner

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: ai.rs  app.rs  config.rs  delete.rs  main.rs  prefetch.rs  scanner.rs  service.rs  service_ipc.rs  snapshot.rs
src/ui/: big_files.rs  disk_analysis.rs  mod.rs  quick_clean.rs  unused_apps.rs
