[package]
name = "storage-cleaner"
version = "0.3.0"
edition = "2021"


[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
jwalk = "0.8"
trash = "3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
libprefetch = "0.1"
ntfs = "0.4"
usn-journal-rs = "0.4"
interprocess = "2"
windows-service = "0.8"
